# ericspeed

./: Cargo.toml
src/: app.rs  main.rs  settings.rs
src/speedtest/: download.rs  mod.rs  ping.rs  upload.rs
src/ui/: layout.rs  mod.rs
